<resources>
    <string name="app_name">Easy Trip Planner</string>
    <string name="mail">Mail</string>
    <string name="pass">Password</string>
    <string name="login">login</string>
    <string name="repass">Enter Password Again</string>
    <string name="signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="create_new">Create New Account</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="error_title">Please Provide Title for the Trip</string>
    <string name="error_date">Please Provide Valid Date</string>
    <string name="error_source">No Source Location Data found</string>
    <string name="error_destination">No Destination Location Data found</string>
    <string name="authintication_failed">Server Authintication Failed</string>
    <string name="error_empty_date">Date Filed is Empty</string>
    <string name="trip_saved">Your Trip Saved Successfully</string>
    <string name="trip_type_title">Trip Type</string>
    <string name="radio_one">One Way</string>
    <string name="radio_round">Round</string>
    <string name="add_notes">Add Notes</string>
    <string name="notes_limit">Only 10 Notes Allowed</string>
    <string name="add_trip">Add Trip</string>
    <string name="empty_step">(Empty)</string>
    <string name="google_maps_key">AIzaSyBiSF7FB8JNV1DTfyZyYSNyOGkrdW7xGeU</string>
    <string name="trip_title_hint">Trip Title</string>
    <string name="trip_notes">Trip Notes</string>
    <string name="start">Start</string>
    <string name="btn_start">Start Trip</string>
    <string name="end">End</string>
    <string name="empty">No data Found</string>
    <string name="retry">Retry</string>
    <!--    show activity-->
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="time">Time </string>
    <string name="trip_status">Trip Status</string>
    <string name="notes">Notes</string>
    <string name="start_trip_btn">Show Trip</string>
    <string-array name="status_array">
        <item>Up Coming</item>
        <item>Started</item>
        <item>Done</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="type_array">
        <item>One Way</item>
        <item>Round</item>
    </string-array>
    <string name="title_activity_trip_details_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_trip">Cancel</string>
    <string name="later_trip">Later</string>
    <string name="start_trip">Start</string>
    <string name="trip_alert">Alert Trip</string>
    <string name="network_not_avaliable">Network Not Avaliable</string>
    <string name="take_action">Take Action</string>

    <string name="addnewtrip">addNewTrip</string>
    <string name="About">about</string>
    <string name="update_trip">Update Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="forgot">Forgot Your Password ?</string>
    <string name="cancel">Cancel</string>
    <string name="no_notes_found">No Botes Found for this trip</string>
    <string name="continue_trip">Continue Trip</string>
    <string name="close_widget">Close Widget</string>
    <string name="showMap">Show Map</string>

</resources>
