<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iti.mansoura.tot.easytripplanner.login.Login" >

    <include
        android:id="@+id/include"
        layout="@layout/login_background"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="125dp"
        android:layout_height="122dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="148dp"
        android:foregroundGravity="clip_horizontal"
        android:src="@drawable/travel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/editText_Mail_Sign"
        android:layout_width="338dp"
        android:layout_height="49dp"
        android:layout_marginTop="380dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        android:onClick="txtEmailClick"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <EditText
        android:id="@+id/editText_Pass2_Sign"
        android:layout_width="338dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_locked"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:onClick="txtPassClick"
        android:textColor="@android:color/white"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Mail_Sign" />

    <Button
        android:id="@+id/btn_SignUP"
        android:layout_width="338dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:onClick="btnLoginClick"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Pass2_Sign" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:alpha="0.9"
        android:background="@drawable/shape"
        android:onClick="btn_signUp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/create_new"
        android:textColor="#6200EE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignUP" />


</androidx.constraintlayout.widget.ConstraintLayout>