<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.iti.mansoura.tot.easytripplanner.signup.SignUp">

    <include
        android:id="@+id/include"
        layout="@layout/login_background"
        app:layout_constraintBottom_toTopOf="@+id/imgView_Logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
         android:id="@+id/imgView_Logo_login"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
         android:contentDescription="TODO"
         android:foregroundGravity="clip_horizontal"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />

    <EditText
         android:id="@+id/editText_Mail_Sign"
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/btnframe"
         android:drawableLeft="@drawable/ic_mail"
         android:drawablePadding="5dp"
         android:ems="10"
         android:hint="@string/mail"
         android:inputType="textPersonName"
         android:onClick="txtEmailClick_Sign"
         android:paddingStart="10dp"
         android:paddingTop="10dp"
         android:textColor="@color/textcolor"
         android:textColorHint="@color/textcolor"
         app:layout_constraintBottom_toTopOf="@+id/editText_UserName_Sign"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView_Logo_login" />

    <EditText
        android:id="@+id/editText_UserName_Sign"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_boss"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:onClick="txtUserNameClick_Sign"
         android:paddingStart="10dp"
         android:background="@drawable/btnframe"
         android:drawablePadding="5dp"
         android:textColor="@color/textcolor"
         android:textColorHint="@color/textcolor"
         app:layout_constraintBottom_toTopOf="@+id/editText_Pass1_Sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Mail_Sign" />

    <EditText
        android:id="@+id/editText_Pass2_Sign"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_locked"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        android:onClick="txtPassClick_Sign"
         android:paddingStart="10dp"
         android:background="@drawable/btnframe"
         android:drawablePadding="5dp"
         android:textColor="@color/textcolor"
         android:textColorHint="@color/textcolor"
         app:layout_constraintBottom_toTopOf="@+id/btn_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Pass1_Sign" />

    <EditText
        android:id="@+id/editText_Pass1_Sign"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_locked"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:onClick="txtPassClick_Sign"
         android:paddingStart="10dp"
         android:background="@drawable/btnframe"
         android:drawablePadding="5dp"
         android:textColor="@color/textcolor"
         android:textColorHint="@color/textcolor"
         app:layout_constraintBottom_toTopOf="@+id/editText_Pass2_Sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_UserName_Sign" />

    <Button
         android:id="@+id/btn_Login"
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="70dp"
         android:background="@drawable/btnsignin"
         android:onClick="btnSignClick"
         android:text="@string/signup"
         android:textColor="@color/card_details_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_Pass2_Sign" />


</androidx.constraintlayout.widget.ConstraintLayout>
